crates/squealy/tests/compile_fail/view_delete_rejected.stderr
error[E0277]: the trait bound `ActiveUser<'_>: UpdateableTable` is not satisfied
  --> tests/compile_fail/view_delete_rejected.rs:44:10
   |
44 |         .delete();
   |          ^^^^^^ unsatisfied trait bound
   |
help: the trait `UpdateableTable` is not implemented for `ActiveUser<'_>`
  --> tests/compile_fail/view_delete_rejected.rs:27:1
   |
27 | struct ActiveUser<'scope, C: ColumnMode = ColumnExpr> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: the trait `UpdateableTable` is implemented for `User<'scope>`
  --> tests/compile_fail/view_delete_rejected.rs:7:35
   |
 7 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^
note: required by a bound in `squealy::DeleteSourceQuery::delete::{anon_assoc#0}`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   |         Self::Table: UpdateableTable + 'conn,
   |                      ^^^^^^^^^^^^^^^ required by this bound in `DeleteSourceQuery::delete::{anon_assoc#0}`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
